[package]
name = "flowdsp-blog"
version = "0.1.0"
authors = ["Antoine van Gelder <antoine@flowdsp.io>"]
edition = "2018"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.7"
cortex-m-semihosting = "0.3.2"
panic-semihosting = "0.5.1"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.3.0"

[dependencies.stm32f30x]
features = ["rt"]
version = "0.8.0"  # latest is 0.8.0!

[[bin]]
name = "stm32f3-01-interrupts"
path = "src/stm32f3-01-interrupts.rs"