[package]
name = "stm32f3-rust-examples"
version = "0.1.0"
authors = ["Antoine van Gelder <antoine@flowdsp.io>"]
edition = "2018"


[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.7"
panic-itm = "0.4.0"

[dependencies.stm32f3]
version = "0.6.0"
features = ["stm32f303", "rt"]

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.3.0"


[[bin]]
name = "stm32f3-01-interrupts"
path = "src/stm32f3-01-interrupts.rs"

[[bin]]
name = "stm32f3-02-dma"
path = "src/stm32f3-02-dma.rs"


[profile.dev]
opt-level = 3
